Sun Feb 11 21:19:41 2001  George Lebl <jirka@5z.com>

	* edit.c: fix a possible segfault

Wed Jan 10 20:24:48 2001  George Lebl <jirka@5z.com>

	* main.c: Only make the merge path the merge path

Wed Jan 10 12:28:34 2001  George Lebl <jirka@5z.com>

	* main.c, order.c, treeutil.c, utils.c: cleanups and minor fixes

2000-11-02  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* main.c (main): support debian and suse menu things too

	* edit.c, save.c, treedel.c, treednd.c: fix the merge menus
	crashing stuff.

	Bad George.  No beer for you.
	
Wed Oct 18 17:37:58 2000  John Ellis  <johne@bellatlantic.net>

	* gmenu.h, main.c(about_dialog): Use right VERSION in about dialog.

Wed Sep 27 17:04:25 2000  George Lebl <jirka@5z.com>

	* desktop.c, edit.c, gmenu.h, order.c, save.c, tree.c, treenew.c,
	  utils.c:  Use gnome_desktop_entry_free and NOT
	  gnome_desktop_entry_destroy which clobbers desktop entries on
	  disk.  Also don't allow dotfiles to be listed ever.  A bunch of
	  other cleanups and fixes.  Added const correctness all over the
	  place and some preconditions.

Fri Aug 11 14:16:43 2000  George Lebl <jirka@5z.com>

	* edit.c, gmenu.h, main.c, save.c, tree.c, treedel.c, treednd.c:
	  Add the ability to edit system merge menus if they exist

2000-05-19  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gmenu.desktop: Added Swedish translation to comment.

2000-05-10  Jacob Berkman  <jacob@helixcode.com>

	* main.c (main): done explicitely specify the line style

2000-04-03  Alastair McKinstry  <mckinstry@computer.org>

	* gmenu.desktop: Added Irish translation.

2000-03-10  Peter Hawkins  <peterhawkins@ozemail.com.au>

	* main.c: Trivial change to raise any existing about boxes on About.

Thu Feb 10 19:52:28 2000  George Lebl <jirka@5z.com>

	* tree.c,main.c,gmenu.h,treedel.c,treednd.c,save.c:  Add all four
	  types of dentries just like the panel dentry editting.  Make menu
	  naming consistent with the panel.  Add ability to edit the