@@ -1,3 +1,8 @@
+Thu Mar 01 03:32:56 2001  George Lebl <jirka@5z.com>
+
+	* Makefile.am, edit.c:  Fix the icon entry by copying the icon hack
+	  code from the panel directory ala gwmh
+
 Sun Feb 11 21:19:41 2001  George Lebl <jirka@5z.com>
 
 	* edit.c: fix a possible segfault
